// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hub is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 charge_card layout-row layout-wrap"
>
  <div
    className="charge_header layout-row layout-wrap flex-100"
  >
    <div
      className="flex-100 layout-row"
    >
      <div
        className="flex-5 layout-column layout-align-center-center"
      >
        <i
          className="flex-none fa fa-map-marker clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-80 layout-row layout-wrap layout-align-start-start"
      >
        <h3
          className="flex-100 clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        >
           
          FOO_HUB_NAME
           
        </h3>
      </div>
      <div
        className="flex-15 layout-row layout-align-end-center"
      >
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="flex-none fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333, #fafafa)",
              }
            }
          />
        </div>
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <p
            className="flex-none clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333, #fafafa)",
              }
            }
          >
            Back
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-space-around-start charge_panel"
  >
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Import
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={false}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="foo"
          setCurrency={[Function]}
          tag="foo"
        />
      </div>
    </div>
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Export
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={false}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="bar"
          setCurrency={[Function]}
          tag="bar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`state.editCharge is true 1`] = `
<div
  className="flex-100 charge_card layout-row layout-wrap"
>
  <div
    className="charge_header layout-row layout-wrap flex-100"
  >
    <div
      className="flex-100 layout-row"
    >
      <div
        className="flex-5 layout-column layout-align-center-center"
      >
        <i
          className="flex-none fa fa-map-marker clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-80 layout-row layout-wrap layout-align-start-start"
      >
        <h3
          className="flex-100 clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333, #fafafa)",
            }
          }
        >
           
          FOO_HUB_NAME
           
        </h3>
      </div>
      <div
        className="flex-15 layout-row layout-align-end-center"
      >
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="flex-none fa fa-pencil clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333, #fafafa)",
              }
            }
          />
        </div>
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <p
            className="flex-none clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333, #fafafa)",
              }
            }
          >
            Back
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-space-around-start charge_panel"
  >
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Import
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={true}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="foo"
          setCurrency={[Function]}
          tag="foo"
        />
      </div>
    </div>
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Export
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={true}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="bar"
          setCurrency={[Function]}
          tag="bar"
        />
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-end-start layout-wrap button_padding"
    >
      <div
        className="flex-none layout-row"
      >
        <RoundButton
          active={true}
          back={false}
          classNames=""
          disabled={false}
          flexContainer="100"
          handleDisabled={null}
          handleNext={[Function]}
          icon=""
          iconClass="fa-floppy-o"
          inverse={false}
          size="small"
          text="Save"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 charge_card layout-row layout-wrap"
>
  <div
    className="charge_header layout-row layout-wrap flex-100"
  >
    <div
      className="flex-100 layout-row"
    >
      <div
        className="flex-5 layout-column layout-align-center-center"
      >
        <i
          className="flex-none fa fa-map-marker clip"
          style={
            Object {
              "background": "black",
            }
          }
        />
      </div>
      <div
        className="flex-80 layout-row layout-wrap layout-align-start-start"
      >
        <h3
          className="flex-100 clip"
          style={
            Object {
              "background": "black",
            }
          }
        >
           
          FOO_HUB_NAME
           
        </h3>
      </div>
      <div
        className="flex-15 layout-row layout-align-end-center"
      >
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="flex-none fa fa-pencil clip"
            style={
              Object {
                "background": "black",
              }
            }
          />
        </div>
        <div
          className="flex layout-row layout-align-center-center"
          onClick={[Function]}
        >
          <p
            className="flex-none clip"
            style={
              Object {
                "background": "black",
              }
            }
          >
            Back
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-space-around-start charge_panel"
  >
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Import
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={false}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="foo"
          setCurrency={[Function]}
          tag="foo"
        />
      </div>
    </div>
    <div
      className="flex-80 layout-row layout-wrap layout-align-start-start charge_panel_xxport"
    >
      <div
        className="flex-100 layout-row layout-align-start-start"
      >
        <h3
          className="flex-none"
        >
          Export
        </h3>
      </div>
      <div
        className="flex-100 layout-row layout-align-space-between-start layout-wrap"
      >
        <AdminChargeSection
          editCharge={false}
          editCurr={
            Object {
              "label": undefined,
              "value": undefined,
            }
          }
          handleEdit={[Function]}
          key="bar"
          setCurrency={[Function]}
          tag="bar"
        />
      </div>
    </div>
  </div>
</div>
`;
